Fixed spacing in mobile header menu

--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -49,7 +49,7 @@ nav a {
     display: inline-block;
     /*padding: 0 0.67em;*/
     padding: 0 0.67em;
-    line-height: 56px;
+    line-height: 32px;
 }
 
 nav a,
@@ -62,6 +62,15 @@ nav a:hover,
 nav a:active {
     /*text-decoration: underline;*/
     text-decoration: none;
+}
+
+@media screen and (min-width: 600px) {
+    nav a {
+        display: inline-block;
+        /*padding: 0 0.67em;*/
+        padding: 0 0.67em;
+        line-height: 56px;
+    }
 }
 
 .nav-toggle {
@@ -117,7 +126,7 @@ nav div {
 
 nav ul {
     margin: 0;
-    padding: 0;
+    padding: 0.33em 0;
     list-style: none;
     display: none;
     /*position: absolute;*/
@@ -130,6 +139,7 @@ nav ul {
 
 @media screen and (min-width: 600px) {
     nav ul {
+        padding: 0;
         display: block;
         position: inherit;
         background: none;
